DTSCCI-3132 fix